--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,9 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>eni</groupId>
-	<artifactId>porjetEnchere</artifactId>
+	<artifactId>projetEnchere</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>porjetEnchere</name>
+	<name>projetEnchere</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
 		<java.version>11</java.version>
